[tool.poetry]
name = "iban-checker-back"
version = "0.1.0-dev"
description = ""
authors = ["Uladzislau Zablotski"]


[tool.poetry.dependencies]
python = "^3.7"
alembic = "^1.7.5"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
asyncpg = "^0.28.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.16.0"
pytest-mock = "^3.6.1"
greenlet =  "^2.0.2"
isort = "^5.10.1"
flake8 = "^4.0.1"